# rust-graphql-scafolding

./: Cargo.toml  LICENSE  README.md  sqlx-data.json
doc/auth/: auth.sh
migrations/2020-09-19-201909_users/: down.sql  up.sql
migrations/2020-09-19-202150_sessions/: up.sql
src/: main.rs
src/applications/: mod.rs
src/applications/graphql_schema/: graphql.rs
src/applications/users/: users.rs
src/domain/users/: users.rs
src/infrastructure/: auth.rs  auth_model.rs  env.rs  logger.rs  mod.rs  problem.rs  session.rs
